--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@ NODE_ENV=development
 PORT=3000
 
 # Database PostgreSQL
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=your_password_here
-DB_NAME=backoffice_luna
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=postgres
+DATABASE_PASS=your_password_here
+DATABASE_NAME=backoffice_luna
 
 # JWT Authentication
 JWT_SECRET=change_this_to_a_secure_random_string
